Fix z-index issue #8

--- a/css/site.css
+++ b/css/site.css
@@ -38,18 +38,17 @@ h3 {
     bottom: 0;
     right: 0;
     width: 64%;
-    z-index: 0;
 }
 
 #layer-control-text {
     position: absolute;
     top: 2px;
-    right: 300px;
+    right: 310px;
     color: rgba(150,150,150,1);
     margin: 0px 0px 0px 0px;
     text-align: right;
     font-size: 80%;
-    z-index: 10;
+    z-index: 500;
 }
 
 /* On hover of home button, show pointer*/
@@ -147,6 +146,7 @@ h3 {
 }
 
 /*   RIGHT SIDE PANEL*/
+/* Looks like Leaflet default z-index for map is 400, and for controls is 800 or 1000*/
 
 #right-panel {
     position: absolute;
@@ -156,7 +156,7 @@ h3 {
     width: 250px;
     background: rgba(240, 240, 240, .6);
     border-left: 2px solid #597DAB;
-    z-index: 10;
+    z-index: 500;  
 }
 
 .poly-info {
